--- a/style/style.css
+++ b/style/style.css
@@ -4,9 +4,11 @@
 	********************************************
 	For Paid Support - Contact me.
 	********************************************
+
+	063d5b color initial #303030
 */
-		/*color utilisé 
-		
+		/*color utilisé
+
 		*/
 body{
 padding-top:0px;
@@ -24,6 +26,11 @@ p{
 	color:rgb(11, 11, 14);
 	}
 
+	a{
+		color:rgb(11, 11, 14);
+		}
+
+
 .outer{
 background-color:#4396bd
 -background:url('../img/back.gif') repeat;
@@ -39,7 +46,7 @@ border:1px solid #ccc;
 }
 
 header{
-border-top:10px solid#063d5b;
+border-top:10px solid#303030;
 }
 
 .padd{
@@ -48,7 +55,7 @@ padding:5px 10px;
 
 .logo{
 padding:20px 0px;
-border-bottom:1px dashed#063d5b;
+border-bottom:1px dashed#303030;
 }
 
 .logo h1{
@@ -56,7 +63,7 @@ font-size:50px;
 line-height:55px;
 -text-transform:uppercase;
 padding:10px 0px;
-color:#063d5b;
+color:#303030;
 }
 
 .logo p{
@@ -73,7 +80,7 @@ margin:10px 0px;
 }
 
 .obj > .container{
-border-bottom:1px dashed#063d5b;
+border-bottom:1px dashed#303030;
 }
 
 .objective{
@@ -93,25 +100,25 @@ margin:5px 0px;
 
 .education, .skills, .work, .contact, .aboutme{
 padding:10px 0px;
-border-bottom:1px dashed#063d5b;
+border-bottom:1px dashed#303030;
 }
 
 
 .univ, .set, .comp, .cont, .abo{
-border-left:5px solid#063d5b;
+border-left:5px solid#303030;
 padding-left:10px;
 }
 
 .main h2{
 color:#fff;
-background:#063d5b;
+background:#303030;
 padding:3px 10px;
 font-size:15px;
 font-weight:bold
 }
 
 .main h3{
-color:#063d5b;
+color:#303030;
 font-size:13px;
 font-weight:bold
 }
@@ -137,7 +144,7 @@ cursor:pointer;
 }
 
 .label-info:hover{
-background:#000000;
+background:#ffffff;
 }
 
 .details{
@@ -163,7 +170,7 @@ margin:3px;
 /* Footer */
 
 footer{
-border-bottom:10px solid#063d5b;
+border-bottom:10px solid#303030;
 }
 
 .fpadd{
@@ -177,8 +184,8 @@ text-align:right;
 
 .btn{
 	color: #e8e6e7;
-	-background-color:#063d5b;
-	background: #063d5b;
+	-background-color:#303030;
+	background: #303030;
 	border-color: #3f6899;
 	justify-content: center;
 	}
@@ -190,12 +197,12 @@ text-align:right;
 	-border-color: #3f6899;
 	}
 
-	
+
 span{
 	color: #1d3d60;
 	-background-color:#fff;
 	-background: #41484d;
 	-border-color: #3f6899;
-}	
+}
 
 /*#2badd7  ---> couleur initial
