--- a/style.css
+++ b/style.css
@@ -22,3 +22,10 @@ body {
   color: #ffffff;
 }
 
+
+.meta2 {
+  list-style-type: square; /*disc; /* ou circle, square, etc. */
+  margin-left: 1.5em;
+  font-size: 14px;
+  color: black;
+}
